--- a/docs/dox_src/cfs_fm.dox
+++ b/docs/dox_src/cfs_fm.dox
@@ -204,7 +204,7 @@
   The File Manager Application defines one table that specifies the file systems
   contained in your system.
 
-  The table contains #FM_TABLE_ENTRY_COUNT entries defined by #FM_TableEntry_t.
+  The table contains #FM_TABLE_ENTRY_COUNT entries defined by #FM_MonitorTableEntry_t.
 **/
 
 /**
